# authlyn-interactive

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  README.md  build.rs
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: check.md  deploy.md  dev-db.md  test-deploy.md
.githooks/: pre-commit
.github/workflows/: build-release.yml  dco.yml  deploy-novahome.yml  deploy.yml
.playwright-mcp/: page-2026-06-01T10-07-43-843Z.yml  page-2026-06-01T10-08-19-690Z.yml  page-2026-06-01T10-57-02-815Z.yml  page-2026-06-01T10-57-20-349Z.yml  page-2026-06-01T10-57-33-811Z.yml  page-2026-06-01T10-57-39-649Z.yml  page-2026-06-01T10-57-53-179Z.yml  page-2026-06-01T10-58-08-326Z.yml  page-2026-06-01T10-58-24-933Z.yml  page-2026-06-01T10-58-44-866Z.yml  page-2026-06-01T10-59-56-547Z.yml  page-2026-06-01T11-00-19-714Z.yml  page-2026-06-01T11-00-38-437Z.yml  page-2026-06-01T11-01-33-497Z.yml  page-2026-06-01T11-01-57-504Z.yml
deploy/: .env.example  Caddyfile.authlyn-interactive.snippet  authlyn-updater.service  authlyn-updater.timer  authlyn.service  pi-bootstrap.sh  pi-updater.sh  sudoers.authlyn-updater  surrealdb.service
deploy/novahome/: .env.example  Caddyfile  authlyn-cert-sync.service  authlyn-cert-sync.timer  authlyn.service  nova-mcp.env.example  nova-mcp.service  surrealdb.service  sync-cert.sh
docs/: ARCHITECTURE.md  CODE-REVIEW-2026-05-29.md  CODE-REVIEW-2026-06-12.md  FEEDBACK-TRIAGE-2026-05-30.md  README.md
docs/architecture/: 01-overview.md  02-request-lifecycle.md  03-data-model.md  04-realtime-sse.md  05-auth-privacy.md  06-markup-engine.md  07-ui-shell.md  08-styling-chrome.md  09-testing.md  10-nova-mcp.md  11-build-deploy-pwa.md
docs/reference/: conventions.md  rest-api.md
docs/superpowers/plans/: 2026-05-21-pi-auto-deploy.md  2026-06-10-mendicant-bias-m1-realtime-backbone.md  2026-06-10-mendicant-bias-w1-realtime-backbone.md  2026-06-11-mendicant-bias-m2-design-system.md  2026-06-11-mendicant-bias-m3-shell-navigation.md  2026-06-11-mendicant-bias-m4-chat-experience.md  2026-06-11-mendicant-bias-w2-design-system.md  2026-06-11-mendicant-bias-w3-shell-navigation.md  2026-06-11-mendicant-bias-w4-chat-experience.md  2026-06-13-w5-skeleton-a-orbit.md  2026-06-13-w5-skelettvagen-foundation.md  2026-06-13-w5-skelettvagen-roadmap.md  2026-06-17-mendicant-bias-m6-identity.md  2026-06-18-mendicant-bias-m7-dms.md
docs/superpowers/specs/: 2026-05-21-pi-auto-deploy-design.md  2026-06-10-mendicant-bias-design.md
docs/superpowers/specs/assets/2026-06-10-mendicant-bias/: app-concepts.html  final-catalogue.html  final-design-v2.html  final-design-v3.html  final-design.html  (+9 more)
end2end/tests/: e2ee-smoke.spec.ts  example.spec.ts  roleplay-smoke.spec.ts
examples/: gen_emoji_json.rs
public/: emoji.json  manifest.webmanifest  offline.html  register-sw.js  sw.js
scripts/: check-no-remnants.sh  cloud-e2e.sh  cloud-session-start.sh  deploy.sh  dev-db.sh  e2e.sh  install-deploy-command.sh  novahome-deploy.sh  precommit.sh  release-name.sh
src/: app.rs  db.rs  lib.rs  main.rs  markup.rs  protocol.rs
src/client/: api.rs  mod.rs  session.rs  store.rs
src/crypto/: attachment.rs  identity.rs  megolm.rs  mod.rs  olm.rs  pickle.rs  prekey.rs
src/markup/: blocks.rs  crest.rs  mod.rs  tokenize.rs  tree.rs
src/native/: act.rs  api.rs  emoji_manager.rs  friends.rs  image.rs  lorebook.rs  markup_view.rs  members.rs  mod.rs  modal.rs  state.rs  theme.rs  trash.rs  ui.rs  wardrobe.rs
src/server/: accent.rs  access.rs  auth.rs  cameos.rs  ctx.rs  datetime.rs  db_helpers.rs  dev_reload.rs  dms.rs  emoji.rs  errors.rs  events.rs  feedback.rs  friends.rs  guilds.rs  keys.rs  keyshare.rs  lorebook.rs  media.rs  messages.rs  mod.rs  nova_llm.rs  permissions.rs  personas.rs  push.rs  retry.rs  rooms.rs  state.rs  system_messages.rs  validate.rs
src/server/auth/: admin.rs  crypto.rs  mod.rs  password.rs  registration.rs  session.rs
src/server/guilds/: channels.rs  deletion.rs  icon.rs  membership.rs  mod.rs
src/server/messages/: editing.rs  mod.rs  nova.rs  posting.rs  read_state.rs  reading.rs  rolling.rs  typing.rs  unread.rs
src/server/personas/: core.rs  editors.rs  gallery.rs  mod.rs  wear.rs
src/storage/: mod.rs  schema.surql
src/ui/: accent.rs  auth.rs  avatar.rs  clipboard.rs  crest.rs  icons.rs  inline_rename.rs  markup_view.rs  mod.rs  modal.rs  shell.rs
src/ui/emoji/: data.rs  mod.rs
src/ui/shell/: account.rs  ceremony.rs  channel.rs  emoji_manager.rs  friends.rs  holopanel.rs  lorebook.rs  members.rs  mod.rs  server.rs  state.rs  toast.rs  wardrobe.rs
src/ui/shell/act/: account.rs  admin.rs  cameo.rs  channel.rs  compose_colors.rs  dm.rs  emoji.rs  feedback.rs  guild.rs  haptics.rs  hum.rs  message.rs  mod.rs  notify.rs  persona.rs  prefs.rs  reentry.rs  sync.rs  toast.rs
src/ui/shell/channel/: attachments.rs  avatar.rs  emoji_suggest.rs  lightbox.rs  manager.rs  meta.rs  mod.rs  radial.rs  skeleton.rs
src/ui/shell/sk_orbit/: blossom.rs  charge.rs  drag.rs  mod.rs  orbit_map.rs  pane_swipe.rs  strip.rs  warp.rs
style/: _attachments.scss  _auth.scss  _base.scss  _ceremony.scss  _content.scss  _crest.scss  _foundation.scss  _holopanel.scss  _layout.scss  _lightbox.scss  _lorebook.scss  _markup.scss  _mobile.scss  _mobile_emoji.scss  _modal.scss  _motion.scss  _msg_who.scss  _nav.scss  _rail.scss  _sidebar.scss  _sk_orbit.scss  _sk_orbit_chat.scss  _sk_orbit_chrome.scss  _skeleton.scss  _toast.scss  _tokens.scss  _trash.scss  _typography.scss  _wardrobe.scss  _wave_b.scss  main.scss
tests/: accent.rs  auth.rs  cache_control.rs  cameos.rs  dev_reload.rs  dms.rs  emoji.rs  events.rs  feedback.rs  friends.rs  guilds.rs  keys.rs  keyshare.rs  lorebook.rs  media.rs  mentions.rs  messages.rs  nova.rs  personas.rs  push.rs  read_state.rs  retry_canary.rs  roll.rs  rooms.rs  schema_apply.rs  skeleton_switch.rs  soft_delete.rs  style_lint.rs  sync_events.rs  system_messages.rs  typing_drafts.rs  unread.rs
tests/common/: mod.rs
visual-gate/: README.md  package-lock.json  package.json  run-gate.mjs  seed.mjs
(+6 files in other folders)
