[package]
name = "authlyn-interactive"
# CalVer: YYYY.M.D. Bump the date on every release; codename in [package.metadata.release].
version = "2026.5.21"
edition = "2021"

[package.metadata.release]
# Suggested codename for this build. Generate a fresh one with `./scripts/release-name.sh`.
codename = "giggly-crescent"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true, features = ["multipart"] }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }

# SurrealDB client (ssr-only; never compiled into the WASM bundle).
# Pinned to the 3.x line so the on-machine `surreal` binary 3.x and the
# Rust SDK speak the same WebSocket subprotocol. There is no stable 3.x
# crate yet, so we ride the latest beta.
surrealdb = { version = "=3.1.0-beta.3", features = ["protocol-ws"], optional = true }
serde = { version = "1", features = ["derive"] }
# `protocol.rs` is shared between ssr and hydrate, and the DTOs there are
# wire-format JSON, so `serde_json` lives in the always-on dependency block.
serde_json = "1"

# End-to-end encryption: Signal-style Double Ratchet via vodozemac.
# Compiled into both ssr (server keying) and hydrate (client sessions).
# `libolm-compat` gives us `to_libolm_pickle` / `from_libolm_pickle` (AES-CBC
# + HMAC-SHA256), which we use for at-rest encryption of the device Account.
vodozemac = { version = "0.9", features = ["libolm-compat"] }

# Crypto helpers used by both the server (routing) and the client (E2EE).
base64    = "0.22"
hex       = "0.4"
aes       = "0.8"
ctr       = "0.9"
sha2      = "0.10"
rand      = "0.8"
thiserror = "1"

# Server-only helpers (ssr feature)
tower-http         = { version = "0.6", features = ["limit"], optional = true }
bytes              = { version = "1", optional = true }
tracing            = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
# Used by `src/server/datetime.rs` to format raw `surrealdb::types::Datetime`
# rows into fixed-9-digit RFC3339 strings (`SecondsFormat::Nanos`) on the
# wire — variable-precision sub-second output (chrono's `AutoSi` default,
# which is what SurrealDB's `<string>cast` produces) lex-mis-orders rows at
# format-class boundaries. Declared as a direct dep so a future SurrealDB
# bump that drops chrono from its public surface won't silently break us.
# Server-only; no WASM `getrandom` concern.
chrono             = { version = "0.4", optional = true, default-features = false, features = ["std"] }

# vodozemac transitively pulls getrandom 0.2 for chacha20poly1305 / aead;
# the WASM target needs the "js" feature so it can borrow the browser's
# `crypto.getRandomValues`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Test-only helpers. Integration tests in `tests/` exercise the axum router
# via `tower::ServiceExt::oneshot` without binding a real port.
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# Step 8's `tests/messages.rs` consumes SurrealDB LIVE-SELECT notifications via
# `QueryStream<Notification<R>>`, which implements `futures::Stream`. Calling
# `.next()` on that stream requires `futures::StreamExt`; `surrealdb` uses
# `futures` internally but does not re-export `StreamExt` from its crate root,
# so we depend on it directly here. Keeping it under `[dev-dependencies]` only
# preserves the no-extra-runtime-deps invariant for the shipping binary.
futures = "0.3"

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:surrealdb",
    "dep:tower-http",
    "dep:bytes",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:chrono",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "authlyn-interactive"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/authlyn-interactive.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
