[package]
name = "authlyn-interactive"
# CalVer: YYYY.M.D. Bump the date on every release; codename in [package.metadata.release].
version = "2026.6.1"
edition = "2021"

[package.metadata.release]
# Suggested codename for this build. Pick a fresh two-word name manually and set it here.
codename = "saffron-tide"

[lib]
crate-type = ["cdylib", "rlib"]

# Nova MCP bridge — only built when the `nova` feature is on, so the default
# build / cargo-leptos never compiles it (it never enters the app graph).
[[bin]]
name = "nova-mcp"
path = "src/bin/nova-mcp.rs"
required-features = ["nova"]

# Native desktop/Android client (Freya). Only built with the `freya` feature,
# so the default build / cargo-leptos never compiles it (mirrors nova-mcp).
[[bin]]
name = "authlyn-native"
path = "src/bin/authlyn-native.rs"
required-features = ["freya"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true, features = ["multipart"] }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
# Async runtime for the axum server (ssr; nova/freya add their own features
# below). `sync` enables `tokio::sync::broadcast` — the process-wide W1
# realtime event hub on `AppState` that fans mutation events out to SSE.
# `time` backs the SSE quiet-stream session re-check (`tokio::time::timeout`
# around the bus `recv()` in `server/events.rs`, review M-05 follow-up) — do
# not rely on axum enabling it transitively.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"], optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
# Browser `Date` for local-timezone timestamp formatting in the channel view.
# Hydrate-only, same wiring as wasm-bindgen above.
js-sys = { version = "0.3", optional = true }
# Same web-sys crate Leptos re-exports; we enable the one extra interface
# (MediaQueryList) so the composer can detect touch devices via
# `window.matchMedia("(pointer: coarse)")`. The XmlHttpRequest* + ProgressEvent
# interfaces back the progress-reporting media upload (F-8): gloo-net's Fetch
# has no upload-progress hook, so `api::upload_media` drives a raw XHR and
# subscribes to `upload.onprogress`. EventSource + MessageEvent back the W1
# SSE sync consumer (`GET /events` stream + its onmessage payloads). DomRect
# backs the radial menu's topbar-bottom measurement (W4/T4 audit,
# `getBoundingClientRect` in shell/channel/radial.rs) — no leptos-family
# crate enables it, so it must be listed here. ResizeObserver backs the
# measured `--composer-h` placement var (UX evolution #11): the composer
# band's height mirrored onto <html> so the toast capsule and channel floats
# anchor to it (shell/channel/mod.rs). Hydrate-only; feature-unified.
web-sys = { version = "0.3", optional = true, features = ["MediaQueryList", "Notification", "NotificationPermission", "FormData", "File", "FileList", "HtmlInputElement", "ClipboardEvent", "DataTransfer", "DataTransferItem", "DataTransferItemList", "DomRect", "Element", "NodeList", "ResizeObserver", "XmlHttpRequest", "XmlHttpRequestUpload", "XmlHttpRequestResponseType", "ProgressEvent", "Event", "EventSource", "MessageEvent"] }

# Browser-only client helpers (hydrate feature). gloo-net wraps the Fetch API
# for the REST calls in `src/client/api.rs`; gloo-storage persists the device
# snapshot to localStorage; gloo-timers drives the message poll loop. All three
# are wasm-only and must never enter the ssr dependency graph — hence optional,
# enabled solely by the `hydrate` feature below.
gloo-net = { version = "0.6", optional = true, default-features = false, features = ["http", "json"] }
gloo-storage = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
# Await browser Promises (serviceWorker.ready, pushManager.subscribe) when
# wiring Web Push from the client. Hydrate-only; wasm-only.
wasm-bindgen-futures = { version = "0.4", optional = true }
# Futures combinators, serving BOTH graphs. Hydrate: `future::join_all` in
# `shell/wardrobe.rs` (W7/B3) correlates parallel `upload_media` results with
# input order before posting the persona-gallery batch endpoint (already in
# the wasm graph transitively via `wasm-bindgen-futures` and `gloo-net`, so
# exposing it explicitly adds no new crates). Ssr: `Stream` helpers for the
# W1 realtime SSE `GET /events` stream. `default-features = false` to stay
# off the std-formatted prelude bloat.
futures-util = { version = "0.3", default-features = false, features = ["alloc", "async-await"], optional = true }

# SurrealDB client (ssr-only; never compiled into the WASM bundle).
# Pinned to the 3.x line so the on-machine `surreal` binary 3.x and the
# Rust SDK speak the same WebSocket subprotocol. There is no stable 3.x
# crate yet, so we ride the latest beta.
surrealdb = { version = "=3.1.0-beta.3", features = ["protocol-ws"], optional = true }
serde = { version = "1", features = ["derive"] }
# `protocol.rs` is shared between ssr and hydrate, and the DTOs there are
# wire-format JSON, so `serde_json` lives in the always-on dependency block.
serde_json = "1"

# Hashing / encoding helpers. `sha2` hashes session tokens; `hex`/`base64`
# encode ids and binary payloads; `rand` mints session tokens (server-side)
# and test ids; `thiserror` backs the server error enums.
base64    = "0.22"
hex       = "0.4"
sha2      = "0.10"
rand      = "0.8"
thiserror = "1"

# Server-only helpers (ssr feature)
tower-http         = { version = "0.6", features = ["limit"], optional = true }
bytes              = { version = "1", optional = true }
tracing            = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
# Used by `src/server/datetime.rs` to format raw `surrealdb::types::Datetime`
# rows into fixed-9-digit RFC3339 strings (`SecondsFormat::Nanos`) on the
# wire — variable-precision sub-second output (chrono's `AutoSi` default,
# which is what SurrealDB's `<string>cast` produces) lex-mis-orders rows at
# format-class boundaries. Declared as a direct dep so a future SurrealDB
# bump that drops chrono from its public surface won't silently break us.
# Server-only; no WASM `getrandom` concern.
chrono             = { version = "0.4", optional = true, default-features = false, features = ["std"] }
# Password hashing for accounts (argon2id). ssr-only — never in the WASM bundle.
argon2             = { version = "0.5", optional = true }
# Typed session-cookie jar (Set-Cookie emit + Cookie parse) for the auth layer.
axum-extra         = { version = "0.10", features = ["cookie"], optional = true }
# `time::Duration` for the session cookie Max-Age — same 0.3 line the `cookie`
# crate (under axum-extra) uses, so the types unify. ssr-only.
time               = { version = "0.3", optional = true, default-features = false }
# On-the-fly avatar thumbnailing in `src/server/media.rs` (GET /media/{id}?w=N):
# decode the stored blob, downscale, re-encode JPEG, cache to disk. Lean codec
# set (the formats personas actually upload). ssr-only — never in the WASM
# bundle. `rayon` off to keep it single-threaded inside spawn_blocking.
image              = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "webp", "gif"] }
# Web Push (#30 background notifications): builds the encrypted aes128gcm
# payload + VAPID signature and POSTs it to the browser's push endpoint
# (FCM / Apple / Mozilla). ssr-only — never in the WASM bundle. Default
# features pull the isahc (libcurl) client; the send path reuses a single
# IsahcWebPushClient held in AppState. Needs system libcurl at build time.
web-push           = { version = "0.11", optional = true }

# Nova MCP server (the `nova` feature + the `nova-mcp` bin). Native-only, never
# in the app's ssr/hydrate graph — a standalone bridge that talks to the running
# authlyn HTTP API as the "Nova" account and exposes it over MCP. rmcp is the
# official Rust MCP SDK; reqwest is the HTTP client (cookie jar for the session;
# no TLS — the target is loopback http).
rmcp     = { version = "0.8", features = ["server", "macros", "transport-streamable-http-server"], optional = true }
reqwest  = { version = "0.12", default-features = false, features = ["json", "cookies", "multipart"], optional = true }
anyhow   = { version = "1", optional = true }

# Native GUI for the desktop/Android client (the `freya` feature + the
# `authlyn-native` bin). True no-webview, Skia-rendered, own reactive core
# (0.4 dropped Dioxus). Pinned to the exact rc that Phase 0 de-risked — rc
# churn is real. Native-only; never in the leptos ssr/hydrate graph.
freya    = { version = "=0.4.0-rc.21", optional = true }

# Native OS file picker for the composer's attach button (the `freya` feature).
# `AsyncFileDialog` is driven from a Freya `spawn` task on the tokio runtime —
# the sync dialog would block winit/Skia. 0.17 dropped the tokio/async-std
# feature split, so default features suffice (XDG portal backend on Linux; no
# libgtk-3 build dep). Native-only; never in the ssr/hydrate/nova graph.
rfd      = { version = "0.17", optional = true }

# `Send + Sync` shim for !Send wasm types. Already vendored transitively via
# leptos; declared explicitly so `src/ui/modal.rs` can hold an `HtmlElement`
# across the `Effect` / `on_cleanup` boundary (W7/D2 focus-restoration). Wasm
# is single-threaded, the wrapper panics on cross-thread access — exactly the
# semantics we want for the !Send web-sys types. Hydrate-only.
send_wrapper = { version = "0.6", optional = true }

# `rand` pulls getrandom 0.2 into the WASM (hydrate) build; that target needs
# the "js" feature so getrandom can borrow the browser's `crypto.getRandomValues`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Test-only helpers. Integration tests in `tests/` exercise the axum router
# via `tower::ServiceExt::oneshot` without binding a real port.
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# Step 8's `tests/messages.rs` consumes SurrealDB LIVE-SELECT notifications via
# `QueryStream<Notification<R>>`, which implements `futures::Stream`. Calling
# `.next()` on that stream requires `futures::StreamExt`; `surrealdb` uses
# `futures` internally but does not re-export `StreamExt` from its crate root,
# so we depend on it directly here. Keeping it under `[dev-dependencies]` only
# preserves the no-extra-runtime-deps invariant for the shipping binary.
futures = "0.3"

# Build-time only: feeds the `examples/gen_emoji_json.rs` one-shot generator
# that emits `public/emoji.json` (W7/D1). `emojis` is a static phf table; the
# generator pulls it once, writes the JSON to the repo, and the wasm hydrate
# build then ships only the JSON asset — not the crate. Dev-deps don't enter
# the lib graph, so the wasm bundle stays free of this ~80 KB brotli payload.
emojis = "0.8.2"

http-body-util = "0.1"   # frame-by-frame reading of SSE test responses (W1)

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:gloo-net",
    "dep:gloo-storage",
    "dep:gloo-timers",
    "dep:wasm-bindgen-futures",
    "dep:futures-util",
    "dep:send_wrapper",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:surrealdb",
    "dep:tower-http",
    "dep:bytes",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:chrono",
    "dep:argon2",
    "dep:axum-extra",
    "dep:time",
    "dep:image",
    "dep:web-push",
    "dep:futures-util",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
# The Nova MCP bridge binary. Standalone (no leptos/lib deps); build with
# `cargo build --release --bin nova-mcp --features nova`. Pulls a full tokio
# runtime + reqwest + rmcp, all native-only.
nova = [
    "dep:rmcp",
    "dep:reqwest",
    "dep:anyhow",
    "dep:axum",
    "dep:tokio",
    "tokio/macros",
    "tokio/net",
    "tokio/signal",
    "tokio/rt-multi-thread",
    "dep:tracing",
    "dep:tracing-subscriber",
]
# The native desktop/Android client (Freya). Standalone bin behind a disjoint
# feature, like `nova`: it imports zero ssr/hydrate crates and reuses only the
# always-on `protocol`/`markup` modules. Build with
# `cargo build --bin authlyn-native --features freya`. Pulls Freya (Skia/winit)
# + reqwest (loopback http; no TLS yet) + a tokio runtime — all native-only,
# never in the leptos ssr/hydrate graph.
freya = [
    "dep:freya",
    "dep:reqwest",
    "dep:bytes",
    "dep:rfd",
    "dep:tokio",
    "tokio/macros",
    "tokio/rt-multi-thread",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "authlyn-interactive"
# NB: `hash-files = true` was evaluated for PWA cache-busting (2026-05-30) and
# BACKED OUT. With cargo-leptos 0.3.6 + leptos 0.8 the index DID reference hashed
# js/css/wasm and all three served 200 — but NO `hash.txt` was emitted (the
# documented hash-files artifact; cargo-leptos issue #347), so the JS glue's
# internal `import` of `*_bg.wasm` couldn't be verified to use the hashed name.
# That unverified path is the exact #347 failure mode, and if the glue requests
# an unhashed wasm hydration dies silently (dead SSR shell) — a worse prod
# regression than stale bundles. Not safely verifiable headless here, so the PWA
# staleness fix instead rides on the service-worker update lifecycle (public/sw.js
# + public/register-sw.js: waiting-worker → user-gated skipWaiting → single
# reload) plus the per-build CACHE_VERSION that busts old caches on `activate`.
# Revisit hash-files (with a real headless hydration check) on a newer toolchain.

# The crate now has two bin targets (the server + the `nova-mcp` bridge), so
# cargo-leptos can't auto-pick the server bin — name it explicitly or
# `cargo leptos build` errors with "Several bin targets found".
bin-target = "authlyn-interactive"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/authlyn-interactive.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
# Pin iOS into the query: with plain "defaults", Lightning CSS strips the
# `-webkit-backdrop-filter` prefix from the compiled bundle, and pre-Safari-18
# iOS (which still needs the prefix) would render the W2 glass chrome
# unblurred — the owner tests on iOS. Keep iOS old enough in the query that
# the prefix survives optimization.
browserquery = "defaults, fully supports es6-module, iOS >= 15"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
